<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/des"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="20dp"
        android:background="#DD2C00"
        android:textColor="#FFFCFC"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/idpro"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/editnombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"
            android:hint="@string/edit1"
            android:minHeight="48dp"/>

    </LinearLayout>

</LinearLayout >