<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titul"
        android:gravity="center"
        android:padding="20dp"
        android:background="#DD2C00"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginTop="90dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:gravity="center"/>


        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:src="@drawable/im1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:paddingLeft="15dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/im3" />
        <Button
            android:id="@+id/Inventario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DD2C00"
            android:text="@string/btn1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:paddingLeft="15dp">
    <ImageView
        android:id="@+id/image2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:src="@drawable/im2" />
        <Button
            android:id="@+id/ventas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DD2C00"
            android:text="@string/btn2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:paddingLeft="15dp">


        <Button
            android:id="@+id/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:background="#DD2C00"
            android:gravity="center"
            android:textSize="25dp" />

    </LinearLayout>
</RelativeLayout>