<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".inventario">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titul1"
        android:gravity="center"
        android:padding="20dp"
        android:background="#DD2C00"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="italic"/>
    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@drawable/img" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagen1"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:textSize="25dp">

    <Button
        android:id="@+id/agregar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn4"
        android:background="#FF5722"
        android:textSize="20dp" />

    <Button
        android:id="@+id/eliminar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#FF5722"
        android:text="@string/btn5"
        android:textSize="20dp" />
    <Button
        android:id="@+id/actualizar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#FF5722"
        android:text="@string/btn6"
        android:textSize="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn7"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_delete"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>